--- a/src/app/layout/layout-admin/list-products/list-products.component.html
+++ b/src/app/layout/layout-admin/list-products/list-products.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="list">
     <h2>Danh sách sản phẩm</h2>
     <a routerLink="/admin/add-product" class="btn btn-primary mb-4">Thêm sản phẩm</a>
     <!-- <div class="space-x-1">
