--- a/src/app/layout/layout-admin/update-products/update-products.component.html
+++ b/src/app/layout/layout-admin/update-products/update-products.component.html
@@ -9,34 +9,47 @@
                     <div>
                         <label for="" class="form-lable mb-2">Name</label>
                         <input type="text" class="form-control" formControlName="name">
-
+                        <div class="text-danger" *ngIf="productForm.get('name')?.hasError('required')">Trường dữ liệu
+                            bắt buộc</div>
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2">Price</label>
                         <input type="number" min="0" class="form-control" formControlName="price">
-
+                        <div class="text-danger" *ngIf="productForm.get('price')?.hasError('required')">Trường dữ liệu
+                            bắt buộc</div>
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2">Orinal_price</label>
                         <input type="number" min="0" class="form-control " formControlName="original_price">
-
+                        <div class="text-danger" *ngIf="productForm.get('original_price')?.hasError('required')">Trường
+                            dữ liệu
+                            bắt buộc</div>
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2">Image</label>
                         <input type="file" class="form-control" (change)="HandleGetfile($event)" #fileUpload
                             onchange="console.log(event.target.files)" formControlName="image">
+                        <div class="text-danger" *ngIf="productForm.get('image')?.hasError('required')">Trường dữ liệu
+                            bắt buộc</div>
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2">description</label>
                         <textarea class="form-control" cols="10" rows="5" formControlName="description"
                             placeholder="Nhập mô tả">
                        </textarea>
+                        <div class="text-danger" *ngIf="productForm.get('description')?.hasError('minlength')">Tối thiểu
+                            10 kí tự
+                        </div>
                     </div>
                     <div>
                         <label for="" class="form-lable mb-2"> salient_features</label>
                         <textarea class="form-control" cols="10" rows="5" formControlName="salient_features"
                             placeholder="Nhập mô tả dài">
                        </textarea>
+                        <div class="text-danger" *ngIf="productForm.get('salient_features')?.hasError('minlength')">Tối
+                            thiểu
+                            10 kí tự
+                        </div>
                     </div>
                     <div>
                         <select class="form-select mt-4" formControlName="categoryId">
@@ -44,6 +57,9 @@
                             <option *ngFor="let item of categorys ; index as i" [value]="item._id">{{item.name}}
                             </option>
                         </select>
+                        <div class="text-danger" *ngIf="productForm.get('categoryId')?.hasError('required')"> Trường dữ
+                            liệu bắt buộc
+                        </div>
                     </div>
                 </div>
                 <button class="btn btn-primary mt-5">Cập nhật sản phẩm</button>
