--- a/src/app/layout/layout-admin/add-brand/add-brand.component.html
+++ b/src/app/layout/layout-admin/add-brand/add-brand.component.html
@@ -9,9 +9,11 @@
                     <div>
                         <label for="" class="form-lable mb-2">Name</label>
                         <input type="text" formControlName="name" class="form-control">
+                        <div class="text-danger" *ngIf="cateForm.get('name')?.hasError('required')">Trường dữ liệu bắt
+                            buộc</div>
                     </div>
                 </div>
-                <button class="btn btn-primary mt-5">Thêm mới</button>
+                <button class=" btn btn-primary mt-5">Thêm mới</button>
             </form>
         </div>
     </div>
