--- a/src/app/layout/layout-admin/update-brand/update-brand.component.html
+++ b/src/app/layout/layout-admin/update-brand/update-brand.component.html
@@ -9,6 +9,8 @@
                     <div>
                         <label for="" class="form-lable mb-2">Name</label>
                         <input type="text" formControlName="name" class="form-control">
+                        <div class="text-danger" *ngIf="cateForm.get('name')?.hasError('required')">Trường dữ liệu bắt
+                            buộc</div>
                     </div>
                 </div>
                 <button class="btn btn-primary mt-5">Cập nhật</button>
